[gd_scene load_steps=40 format=3 uid="uid://doqnvgslkh1la"]

[ext_resource type="Script" path="res://Characters/Player/player.gd" id="1_klvgq"]
[ext_resource type="Texture2D" uid="uid://bjc4os7x327j1" path="res://Pixel Adventure 1/Free/Main Characters/Virtual Guy/Idle (32x32).png" id="1_ti688"]
[ext_resource type="Texture2D" uid="uid://cwbyk6b5wcju1" path="res://Pixel Adventure 1/Free/Main Characters/Virtual Guy/Fall (32x32).png" id="2_4wsit"]
[ext_resource type="Script" path="res://Characters/Player/states/state_machine_controller.gd" id="3_cp5aw"]
[ext_resource type="Texture2D" uid="uid://b1163mo4nkkuw" path="res://Pixel Adventure 1/Free/Main Characters/Virtual Guy/Jump (32x32).png" id="3_e8t7u"]
[ext_resource type="Script" path="res://Scripts/node_finite_state_machine.gd" id="3_mcxs6"]
[ext_resource type="Texture2D" uid="uid://dlf4cnvykwts" path="res://Pixel Adventure 1/Free/Main Characters/Virtual Guy/Run (32x32).png" id="3_umqcc"]
[ext_resource type="Script" path="res://Characters/Player/states/idle_state.gd" id="4_43voy"]
[ext_resource type="Script" path="res://Characters/Player/states/fall_state.gd" id="5_s2rth"]
[ext_resource type="Script" path="res://Characters/Player/states/jump_state.gd" id="6_2otxx"]
[ext_resource type="Script" path="res://Characters/Player/states/run_state.gd" id="7_kosoa"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8702r"]
radius = 9.0
height = 26.0

[sub_resource type="AtlasTexture" id="AtlasTexture_dg5je"]
atlas = ExtResource("2_4wsit")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qq2nx"]
atlas = ExtResource("1_ti688")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ewj0w"]
atlas = ExtResource("1_ti688")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y31hu"]
atlas = ExtResource("1_ti688")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0w5av"]
atlas = ExtResource("1_ti688")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjswa"]
atlas = ExtResource("1_ti688")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4dpt"]
atlas = ExtResource("1_ti688")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kw80i"]
atlas = ExtResource("1_ti688")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a10bo"]
atlas = ExtResource("1_ti688")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yualk"]
atlas = ExtResource("1_ti688")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3ftr"]
atlas = ExtResource("1_ti688")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_reary"]
atlas = ExtResource("1_ti688")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1nn0w"]
atlas = ExtResource("3_e8t7u")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ah4h"]
atlas = ExtResource("3_umqcc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpvt8"]
atlas = ExtResource("3_umqcc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_206c6"]
atlas = ExtResource("3_umqcc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcnkv"]
atlas = ExtResource("3_umqcc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bt20c"]
atlas = ExtResource("3_umqcc")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rc5u8"]
atlas = ExtResource("3_umqcc")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1r00r"]
atlas = ExtResource("3_umqcc")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_se44b"]
atlas = ExtResource("3_umqcc")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2jmi"]
atlas = ExtResource("3_umqcc")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ox3rj"]
atlas = ExtResource("3_umqcc")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s3qln"]
atlas = ExtResource("3_umqcc")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yq4eu"]
atlas = ExtResource("3_umqcc")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_1fakh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg5je")
}],
"loop": false,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qq2nx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ewj0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y31hu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0w5av")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jjswa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4dpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kw80i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a10bo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yualk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3ftr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_reary")
}],
"loop": true,
"name": &"idle",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1nn0w")
}],
"loop": false,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ah4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpvt8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_206c6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcnkv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bt20c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rc5u8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1r00r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_se44b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2jmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ox3rj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s3qln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yq4eu")
}],
"loop": true,
"name": &"run",
"speed": 24.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_837yd"]
height = 27.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_klvgq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_8702r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_1fakh")
animation = &"idle"

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 4)
shape = SubResource("CapsuleShape2D_837yd")
debug_color = Color(0.937255, 0.0352941, 0.12549, 0.419608)

[node name="StateMachineController" type="Node" parent="." node_paths=PackedStringArray("state_machine")]
script = ExtResource("3_cp5aw")
state_machine = NodePath("../StateMachine")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_node_state")]
script = ExtResource("3_mcxs6")
initial_node_state = NodePath("IdleState")

[node name="IdleState" type="Node" parent="StateMachine" node_paths=PackedStringArray("player_body_2d", "animated_sprite_2d")]
script = ExtResource("4_43voy")
player_body_2d = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="FallState" type="Node" parent="StateMachine" node_paths=PackedStringArray("player_body_2d", "animated_sprite_2d")]
script = ExtResource("5_s2rth")
player_body_2d = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="JumpState" type="Node" parent="StateMachine" node_paths=PackedStringArray("player_body_2d", "animated_sprite_2d")]
script = ExtResource("6_2otxx")
player_body_2d = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="RunState" type="Node" parent="StateMachine" node_paths=PackedStringArray("player_body_2d", "animated_sprite_2d")]
script = ExtResource("7_kosoa")
player_body_2d = NodePath("../..")
animated_sprite_2d = NodePath("../../AnimatedSprite2D")

[node name="DoubleJump" type="Node" parent="StateMachine"]

[node name="Camera2D" type="Camera2D" parent="."]
